hphp/hack/test/typecheck/constraints/typedef3.php.exp
File "typedef3.php", line 5, characters 34-50:
Some type arguments violate their constraints (Typing[4323])
  File "typedef3.php", line 3, characters 22-22:
  `T` is a constrained type parameter
  File "typedef3.php", line 3, characters 27-29:
  This type constraint is violated
  File "typedef3.php", line 3, characters 27-29:
  Expected `num`
  File "typedef3.php", line 5, characters 45-49:
  But got `mixed`
